--- a/package.json
+++ b/package.json
@@ -10,14 +10,25 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@stripe/react-stripe-js": "^3.6.0",
+    "@stripe/stripe-js": "^7.2.0",
+    "@supabase/supabase-js": "^2.49.4",
+    "@types/stripe": "^8.0.416",
+    "axios": "^1.9.0",
+    "dotenv": "^16.5.0",
+    "flutterwave-react-v3": "^1.3.2",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-paystack": "^6.0.0",
     "react-router-dom": "^6.22.3",
+    "stripe": "^18.0.0",
     "zustand": "^4.5.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
+    "@types/express": "^5.0.1",
+    "@types/node": "^22.15.2",
     "@types/react": "^18.3.5",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.1",
@@ -28,7 +39,8 @@
     "globals": "^15.9.0",
     "postcss": "^8.4.35",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5.5.3",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.8.3",
     "typescript-eslint": "^8.3.0",
     "vite": "^5.4.2"
   }
