--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-paystack": "^6.0.0",
     "react-router-dom": "^6.22.3",
     "stripe": "^18.0.0",
+    "zod": "^3.24.4",
     "zustand": "^4.5.2"
   },
   "devDependencies": {
