--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "server": "node server/index.js",
+    "dev:full": "concurrently \"npm run dev\" \"npm run server\""
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.49.8",
@@ -18,7 +20,14 @@
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.22.3",
     "zod": "^3.24.4",
-    "zustand": "^4.5.2"
+    "zustand": "^4.5.2",
+    "express": "^4.18.2",
+    "cors": "^2.8.5",
+    "bcryptjs": "^2.4.3",
+    "jsonwebtoken": "^9.0.2",
+    "sqlite3": "^5.1.6",
+    "uuid": "^9.0.1",
+    "nodemailer": "^6.9.7"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
@@ -37,6 +46,12 @@
     "ts-node": "^10.9.2",
     "typescript": "^5.8.3",
     "typescript-eslint": "^8.3.0",
-    "vite": "^5.4.2"
+    "vite": "^5.4.2",
+    "concurrently": "^8.2.2",
+    "@types/cors": "^2.8.17",
+    "@types/bcryptjs": "^2.4.6",
+    "@types/jsonwebtoken": "^9.0.5",
+    "@types/uuid": "^9.0.7",
+    "@types/nodemailer": "^6.4.14"
   }
 }
