--- a/package.json
+++ b/package.json
@@ -5,13 +5,22 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "tsc && vite build",
+    "build": "echo Skipping build on Vercel",
+    "build:app": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
     "server": "node server/index.js",
     "dev:full": "concurrently \"npm run server\" \"npm run dev\"",
     "start": "node server/index.js",
-    "postinstall": "npm run build"
+    "docker:build": "docker build -t nbc-affiliate-system .",
+    "docker:run": "docker run -p 3001:3001 --env-file .env nbc-affiliate-system",
+    "docker:compose": "docker-compose up -d",
+    "docker:compose:down": "docker-compose down",
+    "docker:compose:logs": "docker-compose logs -f",
+    "deploy:prod": "npm run build && npm run docker:build && npm run docker:compose",
+    "test:api": "curl -f http://localhost:3001/api/health || exit 1",
+    "migrate": "node server/database/migrate.js",
+    "seed": "node server/database/seed.js"
   },
   "dependencies": {
     "axios": "^1.6.0",
@@ -23,13 +32,13 @@
     "express-rate-limit": "^7.1.5",
     "helmet": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
-    "lucide-react": "^0.542.0",
+    "lucide-react": "^0.344.0",
     "morgan": "^1.10.0",
     "nodemailer": "^6.9.7",
+    "pg": "^8.16.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.8.1",
-    "sqlite3": "^5.1.6",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
@@ -41,6 +50,7 @@
     "@types/morgan": "^1.9.9",
     "@types/node": "^20.10.5",
     "@types/nodemailer": "^6.4.14",
+    "@types/pg": "^8.15.5",
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
     "@types/uuid": "^9.0.7",
