--- a/render.yaml
+++ b/render.yaml
@@ -3,8 +3,8 @@ services:
     name: nbta-backend
     env: node
     plan: free
-    buildCommand: cd server && npm install
-    startCommand: cd server && node index.js
+    buildCommand: npm run build
+    startCommand: npm start
     envVars:
       - key: NODE_ENV
         value: production
