--- a/server/package.json
+++ b/server/package.json
@@ -11,6 +11,11 @@
   "dependencies": {
     "express": "^4.18.2",
     "cors": "^2.8.5",
+    "helmet": "^7.1.0",
+    "express-rate-limit": "^7.1.5",
+    "compression": "^1.7.4",
+    "morgan": "^1.10.0",
+    "dotenv": "^16.3.1",
     "sqlite3": "^5.1.6",
     "jsonwebtoken": "^9.0.2",
     "bcryptjs": "^2.4.3",
