--- a/server/package.json
+++ b/server/package.json
@@ -20,6 +20,7 @@
     "jsonwebtoken": "^9.0.2",
     "bcryptjs": "^2.4.3",
     "nodemailer": "^6.9.7",
+    "resend": "^4.0.0",
     "uuid": "^9.0.1"
   },
   "engines": {
