--- a/env.example
+++ b/env.example
@@ -15,6 +15,8 @@ EMAIL_SERVICE=gmail
 EMAIL_USER=your-email@gmail.com
 EMAIL_PASS=your-app-password
 EMAIL_FROM=NBTA Affiliate System <noreply@nbta.com.ng>
+# Optional: dedicated Resend key used ONLY by the contact form route
+RESEND_CONTACT_API_KEY=your-resend-api-key-for-contact-only
 
 # Frontend URLs (for CORS)
 FRONTEND_URL=https://yourdomain.com
