--- a/api/package.json
+++ b/api/package.json
@@ -1,5 +1,15 @@
 {
-  "type": "commonjs"
+  "name": "nbc-api",
+  "version": "1.0.0",
+  "type": "module",
+  "main": "server.js",
+  "scripts": {
+    "start": "node server.js"
+  },
+  "dependencies": {
+    "express": "^4.18.2",
+    "cors": "^2.8.5"
+  }
 }
 
 
