--- a/api/package.json
+++ b/api/package.json
@@ -8,7 +8,12 @@
   },
   "dependencies": {
     "express": "^4.18.2",
-    "cors": "^2.8.5"
+    "cors": "^2.8.5",
+    "pg": "^8.11.5",
+    "bcryptjs": "^2.4.3",
+    "jsonwebtoken": "^9.0.2",
+    "uuid": "^9.0.1",
+    "nodemailer": "^6.9.7"
   }
 }
 
